<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_gravity="center">


    <EditText
        android:id="@+id/edtCurrentPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/current_password"
        android:inputType="textPersonName"
        android:textColor="@color/main"
        android:textColorHint="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edtNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="text"
        android:textColor="@color/main"
        android:textColorHint="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edtConfirmNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCurrentPassword" />

    <EditText
        android:id="@+id/edtConfirmNewPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:inputType="text"
        android:textColor="@color/main"
        android:textColorHint="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNewPassword" />


    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/text"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_change"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmNewPassword" />

    <Button
        android:id="@+id/btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="107dp"
        android:backgroundTint="@color/main"
        android:text="@string/update"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmNewPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>